--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-architecture",
   "version": "1.0.0",
   "description": "",
-	"type": "module",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server",
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -23,6 +24,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.4.2",
     "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15"
